<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imgui_ros</name>
  <version>0.0.0</version>
  <description>imgui user interface for ros2</description>
  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>internal_pub_sub</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>internal_pub_sub</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
